# rbg

./: .gitignore  CMakeLists.txt  README.md
res/gl/: main.frag  main.vert
res/model/: cube.model
src/: controls.c  controls.h  cubes.c  cubes.h  gen.c  gen.h  linearAlg.c  linearAlg.h  main.c  model.c  model.h  types.h  util.c  util.h
